<resources>
    <string name="app_name">Projecto_cartera</string>


    <string name="btn_Ingreso">Ingresos</string>
    <string name="btn_Gasto">Gastos</string>
    <string name="btn_movimientos">Movimientos</string>
    <string name="btn_inicio">Inicio</string>
    <string name="btn_guardar">Guardar</string>

    <string name="tv1">Mi Cartera App</string>
    <string name="tv2">Balance mensual + remanentes</string>
    <string name="tv3">Ingreso</string>
    <string name="tv4">Saldo anterior</string>
    <string name="tv5">Gasto</string>
    <string name="tv6">Saldo actual</string>
    <string name="tv7">Ingresos</string>
    <string name="tv8">Gastos</string>
    <string name="tv9">Movimientos</string>


    <string name="edt_n1">0</string>



    <string name="edt_txt">Escriba una descripcion breve</string>



</resources>